# oxide-modified-pt-catalyst-dissertation-support

./: .gitattributes  .gitignore  CITATION.cff  DATA_AVAILABILITY.md  DATA_LICENSE.md  LICENSE  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY.md
configs/ch5_ml_tem/: augmentation_screen.yaml  dataset_template.yaml  doe_screen.yaml  family_screen.yaml  production_particle_model.yaml  production_substrate_consensus.yaml  scale_verification_schema.yaml
data/ch4_dft/: figure4_4_constrained_separation.csv  figure4_6_extension.csv  protocols.csv  selected_endpoint_energies.csv  selected_pair_differences.csv
data/ch5_ml_tem/: aggregate_results.csv
docs/: DFT_PROTOCOL_CLASSES.md  HUMAN_VERIFICATION.md  METHODS_TO_DISSERTATION_MAP.md  PRIVACY_AND_EXCLUSIONS.md  RELEASE_ARTIFACTS.md  REPRODUCIBILITY.md
docs/ch4_dft/: README.md
docs/ch5_ml_tem/: README.md
examples/synthetic_tem/: README.md  (+1 more)
manifests/: PUBLIC_DISCLOSURE_MATRIX.csv  RELEASE_MANIFEST.json  SHA256SUMS.txt  SOURCE_TO_PUBLIC_MAPPING.csv
models/: MODEL_REGISTRY.yaml  particle_detector_model_card.md  substrate_consensus_model_card.md  third_party_models.md
scripts/: safety_scan.py
tests/: test_ch4_figure_scripts.py  test_ch5_augment.py  test_ch5_cli.py  test_ch5_dataset.py  test_ch5_evaluation.py  test_ch5_screening.py  test_dft_release.py  test_model_registry.py  test_public_surface.py  test_release_manifest.py  test_sam_prompting.py  test_source_mapping.py  test_substrate_morphometry_scale.py  test_synthetic_example.py
(+82 files in other folders)
